# poly

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  Makefile  benchmark_add  benchmark_add.cpp  benchmark_add_overloads  benchmark_add_overloads.cpp  benchmark_polynomial_add  benchmark_polynomial_add.cpp  benchmark_to_coeff_matrix.cpp  benchmark_transform_vs_loop  benchmark_transform_vs_loop.cpp  run.sh
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  coprime_factorization.cpp  coprime_factorization.h  main.cpp  matrix.h  matrix_fraction_description.h  polynomial.h  polynomial_fraction.h  polynomial_fraction_matrix.cpp  polynomial_fraction_matrix.h  polynomial_matrix.h
test/: CMakeLists.txt  test_matrix_fraction_description.cpp  test_polynomial.cpp  test_polynomial_fraction.cpp  test_polynomial_fraction_matrix.cpp  test_polynomial_matrix.cpp
